Style improved and google maps infowindow an icons appearence corrected

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -38,6 +38,12 @@ es:
   resources: "Recursos"
   to_do: "Qué hacer"
   eat: "Comer"
+  routes_social: "Comparte rutas"
+  routes_social_msg: "Comparte rutas para que todo el mundo pueda opinar sobre ellas"
+  places: "Comparte recursos"
+  places_msg: "lalal"
+  packages_social: "Paquetes personalizados"
+  packages_social_msg: "lalala"
   
   aventure: "Aventura"
   login_msg_upload: "Sube tus fotos y opina"
@@ -85,7 +91,6 @@ es:
   top_rated: "Los más votados"
   last_comments: "Últimos comentarios"
   contribute: "Colabora"
-  create_poi: "Añadir un Sitio"
   create_event: "Crear Evento"
   next_events: "Eventos próximos"
   near: "Cerca"
