Some style improvements and type model for packages created

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -44,7 +44,14 @@ es:
   places_msg: "lalal"
   packages_social: "Paquetes personalizados"
   packages_social_msg: "lalala"
-  authentications: "Logeate con:"
+  authentications: "Accede con:"
+  login_twitter: "Accede con tu cuenta de Twitter"
+  login_facebook: "Accede con tu cuenta de Facebook"
+  login_google: "Accede con tu cuenta de Gmail"
+  poi_type: "Tipo"
+  poi_name: "Nombre"
+  poi_description: "Descripción"
+  submit_poi: "Enviar"
   
   aventure: "Aventura"
   login_msg_upload: "Sube tus fotos y opina"
@@ -107,10 +114,7 @@ es:
   upload_photos: "Subir fotos"
   create_poi: "Crear un nuevo sitio"
   location: "Localización"
-  poi_type: "Tipo"
-  poi_title: "Nombre"
-  poi_description: "Descripción"
-  submit_poi: "Enviar"
+  
   unknown: "Desconocido"
   route_help: "Haz clicks sobre el mapa para dibujar la ruta"
   login_with_account: "Accede con tu cuenta"
@@ -118,9 +122,7 @@ es:
   email: "Email"
   password: "Contraseña"
   password_confirmation: "Confima contraseña"
-  login_twitter: "Accede con tu cuenta de Twitter"
-  login_facebook: "Accede con tu cuenta de Facebook"
-  login_google: "Accede con tu cuenta de Gmail"
+  
   all: "Todos"
   search: "Búsqueda"
   filter: "Filtrar"
