Rating stars added but you cannot vote

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -37,7 +37,7 @@ es:
   packages: "Paquetes"
   resources: "Recursos"
   to_do: "Qué hacer"
-  eat: "Comer"
+  eat: "Donde Comer"
   routes_social: "Comparte rutas"
   routes_social_msg: "Comparte rutas para que todo el mundo pueda opinar sobre ellas"
   places: "Comparte recursos"
