Foursquare functions created recommended and package page started

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -252,6 +252,35 @@ es:
   poi_description: "Descripción"
   submit_poi: "Enviar"
   
+  user_profile: "Perfil de Usuario"
+  uname: "Nombre de usuario"
+  first_name: "Nombre"
+  last_name: "Apellido"
+  restrictions: "Restricciones (Alergías, Problemas para viajar...)"
+  gastronomy: "Gastronomía"
+  ferias: "Ferias"
+  folclore: "Fiestas populares y Folclore"
+  sport: "Deportes (Actividad deportiva, Estadios...)"
+  nature: "Paisajes y Naturaleza"
+  culture: "Arte y Cultura"
+  other: "Otros (Nuevo y Curioso)"
+  buildings: "Construcciones y Monumentos (Arquitectura)"
+  events: "Eventos (Teatro, exposiciones...)"
+  friends: "¿Qué hace mis amigos?"
+  leisure: "Ocio y Entretenimiento (Bares, Pubs, vida nocturna...)"
+  male: "Hombre"
+  female: "Mujer"
+  is_married: "¿Estás Casado o tienes pareja?"
+  has_sons: "¿Tienes hijos?"
+  i_like: "Mis aficiones y gustos"
+  i_dont_like: "Lo que no me gusta"
+  about_me: "Sobre mí"
+  gender: "Sexo"
+  born_date: "Fecha de nacimiento"
+  city: "Ciudad"
+  
+  
+  
   aventure: "Aventura"
   login_msg_upload: "Sube tus fotos y opina"
   login_msg_login: "Accede para colaborar"
